Fix webpage overflow in index

--- a/style/index.css
+++ b/style/index.css
@@ -114,27 +114,32 @@ a {
   opacity: 0.7;
 }
 
-.overlay .top-text {
-  font-size: 2rem;
-}
-
-.overlay .middle-text {
-  font-size: 1.5rem;
-  width: 80%;
-  line-height: 1.5rem;
-}
-
-.overlay .bottom-text {
-  font-size: 2rem;
-  text-transform: capitalize;
-}
-
 .index-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 100%;
+  height: 90%;
+}
+
+.top-text {
+  font-size: 2rem;
+  text-align: center;
+}
+
+ .middle-text {
+  font-size: 2rem;
+  width: 60%;
+  margin: 0 auto;
+  line-height: 3rem;
+  text-align: center;
+}
+
+ .bottom-text {
+  font-size: 2rem;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 /* Main-Program Style */
@@ -349,13 +354,17 @@ a {
   }
 
   .top-text {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
+    width: 80%;
   }
 
-  .overlay .middle-text {
-    font-size: 1rem;
-    line-height: 1.2rem;
+  .middle-text {
+    width: 80%;
   }
+
+ .bottom-text {
+  font-size: 1.4rem;
+}
 
   .main-event {
     grid-template-columns: 1fr;
@@ -391,15 +400,9 @@ a {
 }
 
 @media only screen and (max-width: 420px) {
-  .overlay .top-text {
-    font-size: 1rem;
-  }
-
-  .overlay .middle-text {
-    font-size: 0.7rem;
-  }
-
-  .overlay .bottom-text {
-    font-size: 0.6rem;
+  .middle-text {
+    font-size: 1.5rem;
+    width: 90%;
+    line-height: 2rem;
   }
 }
